Fix mobile scrollbar

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -58,8 +58,11 @@
   font-weight: normal;
 }
 
+html, body {
+  height: 100%;
+}
+
 body {
-  min-height: 100vh;
   color: var(--color-text);
   background: var(--color-background);
   transition:
